--- a/temp_docs/games/smash4/index.html
+++ b/temp_docs/games/smash4/index.html
@@ -34,7 +34,7 @@
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home">
-          <img src="/assets/img/ssb4.jpg" alt="A baby game for babies">
+          <img src="/assets/images/ssb4.jpg" alt="A baby game for babies">
       </div>
     </main><footer class="site-footer h-card">
   <data class="u-url" href="/"></data>
