--- a/temp_docs/ranks/index.html
+++ b/temp_docs/ranks/index.html
@@ -5,11 +5,11 @@ title: Ranks
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home">
-        <h2 class="trigger"><a class="page-link" href="/games/melee/ranks.html">Melee</a></h2>
-        <h2 class="trigger"><a class="page-link" href="/games/ssb4/ranks.html">Smash for Wii U</a></h2>
-        <h2 class="trigger"><a class="page-link" href="/games/ultimate/ranks.html">Ultimate</a></h2>
-        <h2 class="trigger"><a class="page-link" href="/games/64/ranks.html">Smash 64 [Coming Soon]</a></h2>
-        <h2 class="trigger"><a class="page-link" href="/games/brawl/ranks.html">Brawl [Coming Soon]</a></h2>
-        <h2 class="trigger"><a class="page-link" href="/games/pm/ranks.html">Project: M [Coming Soon]</a></h2>
+        <h2 class="trigger"><a class="page-link" href="/games/melee/ranks">Melee</a></h2>
+        <h2 class="trigger"><a class="page-link" href="/games/ssb4/ranks">Smash for Wii U</a></h2>
+        <h2 class="trigger"><a class="page-link" href="/games/ultimate/ranks">Ultimate</a></h2>
+        <h2 class="trigger"><a class="page-link" href="/games/64/ranks">Smash 64 [Coming Soon]</a></h2>
+        <h2 class="trigger"><a class="page-link" href="/games/brawl/ranks">Brawl [Coming Soon]</a></h2>
+        <h2 class="trigger"><a class="page-link" href="/games/pm/ranks">Project: M [Coming Soon]</a></h2>
       </div>
 </main>
